--- a/Projektauftrag/Projektauftrag.adoc
+++ b/Projektauftrag/Projektauftrag.adoc
@@ -40,15 +40,21 @@ Kunden soll es vereinfacht werden nachhaltig einzukaufen. Mit der App ersparen s
 == 6. Konsequenzen bei Nichtdurchführung
 
 == 7. Projektorganisation
-*Projektleiter:* Lena Graßauer
+==== 7.1 *Projektleiter:*
+Projektleiter: Lena Graßauer
 
-*Teammitglieder:*
+==== 7.2 *Teammitglieder:*
 
 * Leonie Findenig
 * Leona Feichtinger
 * Lind Arifi
+* Lena Graßauer
 
 == 8. Zeitplan
+
+*Projektstart:* Jänner 2025
+
+*Geplantes Projektende:* Juni 2025
 
 == 9. Annahmen und Bedingungen
 
