Ziele und Anforderungen Hinzugefügt

--- a/Projektauftrag/Nachhaltigkeitstracker.adoc
+++ b/Projektauftrag/Nachhaltigkeitstracker.adoc
@@ -7,7 +7,9 @@ Das Unternehmen GoodFood in Leonding bietet eine vielfältige Auswahl an Lebensm
 
 === Problemstellung:
 
-Wir möchten, dass unsere Kunden auf einen Blick sehen können, wie nachhaltig unsere Produkte wirklich sind und so einen transparenteren Einblick in unser Unternehmen gewinnen. Derzeit ist es jedoch sehr zeitaufwendig, bei jedem einzelnen Produkt nachzuprüfen, wie nachhaltig es tatsächlich ist. Dadurch hinterfragen unsere Kunden häufiger unsere Bemühungen um Nachhaltigkeit.
+Wir möchten, dass unsere Kunden auf einen Blick sehen können, wie nachhaltig unsere Produkte wirklich sind und so einen transparenteren Einblick in unser Unternehmen gewinnen.
+Derzeit ist es jedoch sehr zeitaufwendig, bei jedem einzelnen Produkt nachzuprüfen, wie nachhaltig es tatsächlich ist.
+Dadurch hinterfragen unsere Kunden häufiger unsere Bemühungen um Nachhaltigkeit.
 
 === Aufgabenstellung
 
@@ -16,20 +18,31 @@ Das erleichtert es unseren Kunden zu sehen das wir uns wirklich mit Nachhaltigke
 
 ==== Funktionale Anforderungen
 
+Unsere Software soll einer Person die Informationen über die Nachhaltigkeit eines Produktes liefern.
+Sie können die Daten erhalten, indem sie den Barcode des Produkts scannen oder den Namen, Hersteller oder die Produkt Kategorie des Produktes eingeben.
+Die Software soll auf eine Datenbank zugreifen können, in der Informationen zur Nachhaltigkeit von Produkten gespeichert sind.
+Die Software soll die Nachhaltigkeitsdaten in einem strukturierten Format anzeigen.
+Zusätzlich könnte z.B. ein Nachhaltigkeitsscore oder eine Einteilung in Kategorien („sehr nachhaltig“, „nachhaltig“, „wenig nachhaltig“) angezeigt werden, damit der Nutzer die Informationen leicht einordnen kann.
 
 ==== Nichtfunktionale Anforderungen (NFA)
+
+Die Benutzeroberfläche soll so gestaltet sein, dass auch unerfahrene Nutzer problemlos die benötigten Informationen finden und die Software bedienen können.
+Sie wird auch ein einfaches, minimalistisches und strukturiertes Layout bekommen um es Kunden einfacher zu machen einen überblick zu bewahren.
+
 === Ziele
+Mehr Menschen kaufen nachhaltiger ein, da es ihnen einfacher gemacht wird, die Nachhaltigkeit von Produkten zu überprüfen.
+Dies kann dazu beitragen, den Klimawandel zu stoppen oder zumindest zu verlangsamen, wenn mehr Menschen einen nachhaltigen Lebensstil führen.
+
 === Mengengerüst
-=== Rahmenbedingungen
-zB Vorgaben vom Auftraggeber
+=== Rahmenbedingungen zB Vorgaben vom Auftraggeber
 
 == Entwurf "Wie mache ich es"
+
 === Systemarchitektur
+
 === ...
 
 == Projekthandbuch "Organisatorische Rahmenbedingungen"
-
-
 
 === GANTT-Diagramm
 
@@ -46,8 +59,6 @@ mit User-Stories (definiert in YouTrack)
 [Test prototype 2] starts at [Prototype completed]'s end
 @endgantt
 ----
-
-
 
 * link:minutes-of-meeting.html[Protokollvorlage]
 * link:demo.html[Demo]
