--- a/Projektauftrag/Nachhaltigkeitstracker.adoc
+++ b/Projektauftrag/Nachhaltigkeitstracker.adoc
@@ -36,32 +36,8 @@ Dies kann dazu beitragen, den Klimawandel zu stoppen oder zumindest zu verlangsa
 
 
 === Mengengerüst
+Die Datenbank sollte ungefähr 5000 Produkte mit Infos enthalten, diese können wir monatlich erweitern. Die App muss bis zu 500 Nutzern jeden Tag standhalten und die Produkdetails nach dem Scannen maximal 1-2 sekunden später anzeigen.
+
 === Rahmenbedingungen zB Vorgaben vom Auftraggeber
-
-== Entwurf "Wie mache ich es"
-
-=== Systemarchitektur
-
-=== ...
-
-== Projekthandbuch "Organisatorische Rahmenbedingungen"
-
-=== GANTT-Diagramm
-
-mit User-Stories (definiert in YouTrack)
-
-[plantuml,gantt-protoype,png]
-----
-@startgantt
-[Test prototype] lasts 10 days
-[Prototype completed] happens at [Test prototype]'s end
-[Setup assembly line] lasts 12 days
-[Setup assembly line] starts at [Test prototype]'s end
-[Test prototype 2] lasts 3 days
-[Test prototype 2] starts at [Prototype completed]'s end
-@endgantt
-----
-
-* link:minutes-of-meeting.html[Protokollvorlage]
-* link:demo.html[Demo]
+Die App soll auf IOS, Android und als Web-Version laufen. Er ist uns vorallem wichtig dass alle Datenschutzanforderungen nach DSGVO eingehalten werden.
 
