--- a/index.adoc
+++ b/index.adoc
@@ -65,4 +65,17 @@ Kunde -- UC3
 ----
 == Welche Probleme löst es
 
-Der Nachhaltigkeitstracker hilft Leuten schneller Umweltfreundliche und ökologische Produckte zufinden. Dazu beweisst es Leuten unsere Transparenz zu sehen/glauben.
+Der Nachhaltigkeitstracker hilft Leuten schneller Umweltfreundliche und ökologische Produkte zu finden. Dazu beweist es Leuten unsere Transparenz zu sehen/glauben.
+
+== Aufgabenstellung
+
+Entwicklung einer Anwendung zur Bewertung der Nachhaltigkeit von Produkten.
+Die Anwendung soll eine Datenbank enthalten, in der Produkte mit relevanten Informationen (z. B. Herkunft, Hersteller, Nachhaltigkeitsscore) gespeichert werden.
+Nutzer können Produkte mithilfe einer Suchleiste oder durch Scannen eines QR-codes finden und deren Nachhaltigkeitsbewertung abrufen.
+
+Hauptfunktionen:
+
+Datenbank: Speicherung von Produktdaten inklusive Kategorien und Barcodes
+Produktsuche: Manuelle Suche oder Barcode-Scan
+Nachhaltigkeitsbewertung: Anzeige von Umwelt- und Nachhaltigkeitsinformationen
+Ziel ist es, Transparenz zu schaffen und nachhaltige Kaufentscheidungen zu erleichtern.
