--- a/index.adoc
+++ b/index.adoc
@@ -14,6 +14,10 @@ Lind Arifi, Leonie Findenig, Lena Graßauer, Leona Feichtinger
 
 == Datenmodell - UML-Klassendiagramm
 
+***
+
+=== Klassendiagram
+
 [plantuml]
 ----
 @startuml
@@ -52,7 +56,7 @@ Produkt <-- ProduktKategorie
 
 ---
 
-== Anwendungsfalldiagramm
+=== Anwendungsfalldiagramm
 
 [plantuml]
 ----
