--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -72,39 +72,37 @@ Nutzer -- UC3
 @enduml
 ----
 
-***
+
 
 == Problemstellung und Lösungsansatz
-***
+
 === Problem:
-Viele Menschen haben Schwierigkeiten, ihre Finanzen zu überblicken und ein Budget effizient zu verwalten.
+Viele Personen sind sich am Ende des Monats unsicher wofür sie  ihr Geld ausgegeben haben.
 
 === Lösung:
-Der Budgetplaner hilft Nutzern, ihre Einnahmen und Ausgaben einfach zu erfassen, ihr Budget zu überwachen und bessere finanzielle Entscheidungen zu treffen.
+Der Budgetplanner ist eine Web Aplikation um am Ende des Monats eine klare Übersicht über seine Finanzen zu haben. Das man aber nicht jedes Monat nur den Schock hat wie viel man ausgegeben hat in gewissen Bereichen, gitb es auch einen Planner.
 
-***
 
 == Aufgabenstellung und Funktionen
-***
 
 === Ziel:
 Entwicklung einer Anwendung zur Verwaltung und Analyse von Einnahmen und Ausgaben, um eine bessere finanzielle Planung zu ermöglichen.
-***
+
 
 === Hauptfunktionen:
-- **Budgetverwaltung:** Erfassen von Einnahmen, Fixkosten und variablen Ausgaben
-- **Kategorien:** Ausgaben in verschiedene Kategorien einteilen
+- **Datenbank:** Einlesen der Bankdaten: Konto Auszüge und Eingänge 
+- **Diagramm:** Ein Diagramm das die Ausgaben in gewisse Bereiche einteilt und abbildet 
+- **Planner:** Eien Funktion zum Plannen der AUsgaben für das Monat 
 
 
-***
 
 == Fazit und Ausblick
-***
+
 
 === Fazit
 Der Budgetplaner erleichtert die Verwaltung der persönlichen Finanzen, bietet eine bessere Kostenkontrolle und hilft bei der Erreichung finanzieller Ziele.
 
 === Ausblick:
-Weitere Erweiterungen könnten eine Bewertung durch Nutzer oder Kooperationen mit Herstellern umfassen.
-
+Weitere Erweiterungen könnten eine Bewertung durch Nutzer oder Kooperationen mit Herstellern umfassen.= Budgetplaner
+ifndef::imagesdir[:imagesdir: images]
 
