--- a/index.adoc
+++ b/index.adoc
@@ -108,7 +108,7 @@ ifndef::imagesdir[:imagesdir: images]
 == Skizzen 
 
 === Ausgaben 
-image::untitled-5.jpg[width=400, align=center]
+image::images/Untitled-5.jpg[width=400, align=center]
 
 === Plannung 
 image::my-image.png[ width=400, align=center]
