--- a/index.adoc
+++ b/index.adoc
@@ -54,7 +54,7 @@ Nutzer <-- Budget
 
 === Anwendungsfalldiagramm
 
-[plantuml,target=diagram-1, format=svg]
+[plantuml, format=svg]
 ----
 @startuml
 actor Nutzer
@@ -111,10 +111,10 @@ ifndef::imagesdir[:imagesdir: images]
 image::untitled-5.jpg[width=400, align=center]
 
 === Plannung 
-image::my-image.png[ width=400, align=center]
+image::untitled-6.jpg[ width=400, align=center]
 
 === Monats vergleich 
-image::my-image.png[ width=400, align=center]
+image::Untitled-7.jpg[ width=400, align=center]
 
 === Einstellungen 
-image::my-image.png[ width=400, align=center]
+image::Untitled-8.jpg[ width=400, align=center]
