--- a/asciidocs/slides/slides.adoc
+++ b/asciidocs/slides/slides.adoc
@@ -1,5 +1,38 @@
 = Budgetplaner
-ifndef::imagesdir[:imagesdir: images]
+:author: firstname lastname
+:email: x.y@htl.at
+:revnumber: 1.0
+:revdate: {docdate}
+:revremark: SLIDEDEMO @ HTL Leonding
+:encoding: utf-8
+:lang: de
+:doctype: article
+//:icons: font
+:customcss: css/presentation.css
+//:revealjs_customtheme: css/sky.css
+//:revealjs_customtheme: css/black.css
+:revealjs_width: 1408
+:revealjs_height: 792
+:source-highlighter: highlightjs
+//:revealjs_parallaxBackgroundImage: images/background-landscape-light-orange.jpg
+//:revealjs_parallaxBackgroundSize: 4936px 2092px
+//:highlightjs-theme: css/atom-one-light.css
+// we want local served font-awesome fonts
+:iconfont-remote!:
+:iconfont-name: fonts/fontawesome/css/all
+//:revealjs_parallaxBackgroundImage: background-landscape-light-orange.jpg
+//:revealjs_parallaxBackgroundSize: 4936px 2092px
+ifdef::env-ide[]
+:imagesdir: ../images
+endif::[]
+ifndef::env-ide[]
+:imagesdir: images
+endif::[]
+//:revealjs_theme: sky
+//:title-slide-background-image: img.png
+:title-slide-transition: zoom
+:title-slide-transition-speed: fast
+
 
 Lind Arifi, Leonie Findenig, Lena Graßauer, Leona Feichtinger
 
@@ -114,7 +147,7 @@ image::Untitled-5.jpg[ width=400, align=center]
 
 image::Untitled-6.jpg[width=400, align=center]
 
-=== Monats vergleich
+=== Monatsvergleich
 
 image::Untitled-7.jpg[width=400, align=center]
 
