--- a/Projektauftrag/pflichtenheft.adoc
+++ b/Projektauftrag/pflichtenheft.adoc
@@ -33,8 +33,8 @@ Mehr Menschen beginnen zu sparen da es ihnen viel einfacher fällt einen überbl
 
 
 === Mengengerüst
-Die Datenbank sollte ungefähr 5000 Produkte mit Infos enthalten, diese können wir monatlich erweitern. Die App muss bis zu 500 Nutzern jeden Tag standhalten und die Produkdetails nach dem Scannen maximal 1-2 sekunden später anzeigen.
+Die Software muss eine große Anzahl an Transaktionen verarbeiten können. Geplant ist eine Kapazität von mindestens 10.000 Transaktionen pro Monat. Zudem sollte die App problemlos bis zu 1000 gleichzeitige Nutzer unterstützen können, ohne Leistungseinbußen zu erleiden. Die Daten sollen in Echtzeit verarbeitet werden, damit Nutzer stets aktuelle Informationen über ihre Finanzen erhalten.
 
-=== Rahmenbedingungen zB Vorgaben vom Auftraggeber
-Die App soll auf IOS, Android und als Web-Version laufen. Er ist uns vorallem wichtig dass alle Datenschutzanforderungen nach DSGVO eingehalten werden.
+=== Rahmenbedingungen
+Die App soll für iOS, Android und als Web-Version verfügbar sein. Sie muss intuitiv bedienbar und sicher sein. Besondere Beachtung liegt auf dem Datenschutz: Alle Nutzerdaten müssen sicher gespeichert und verarbeitet werden, wobei sämtliche Datenschutzanforderungen gemäß DSGVO strikt eingehalten werden. Zudem soll eine Cloud-basierte Speicherung der Daten optional möglich sein, damit Nutzer geräteübergreifend auf ihre Finanzdaten zugreifen können.
 
