--- a/asciidocs/slides/slides.adoc
+++ b/asciidocs/slides/slides.adoc
@@ -138,19 +138,31 @@ ifndef::imagesdir[:imagesdir: images]
 
 === Ausgaben
 
-image::Untitled-5.jpg[ width=700, align=center]
+image::02-syp-gui-images-ausgaben.jpeg[ width=700, align=center]
 
 === Plannung
 
-image::Untitled-6.jpg[width=700, align=center]
+image::03-syp-gui-images-planung.jpeg[width=700, align=center]
 
 === Monatsvergleich
 
-image::Untitled-7.jpg[width=700, align=center]
+image::04-syp-gui-images-monatsvergleich.jpeg[width=700, align=center]
 
-=== Einstellungen
+=== Account
 
-image::Untitled-8.jpg[width=700, align=center]
+image::01-syp-gui-images-account.jpeg[width=700, align=center]
+
+=== Datenimport
+
+image::05-syp-gui-images-datenimport.jpeg[width=700, align=center]
+
+=== Manuelle Daten Eingabe
+
+image::06-syp-gui-images-dateneingabe.jpeg[width=700, align=center]
+
+=== Wireframe
+
+image::07-syp-gui-images.007.jpeg[width=700, align=center]
 
 == Erweiterungsvorschlag:
 
